# ai-agent-memory

./: .gitignore  Agent 长时记忆存储引擎设计(1).md  CMakeLists.txt  Dockerfile  README.md  build-with-cmake.ps1  papers-algorithm-summary.md
DiskANN-main/DiskANN-main/diskann-garnet/: diskann-garnet.nuspec
DiskANN-main/DiskANN-main/diskann-garnet/src/: fsm.rs  garnet.rs  test_utils.rs
DiskANN-main/DiskANN-main/diskann/src/graph/test/cases/: inplace_delete.rs
DiskANN-main/DiskANN-main/vectorset/src/: loader.rs
benches/: bench_search.cpp  bench_write.cpp
compare_logs1/: compare_analysis_report.md  compare_builtin_per_query.csv  compare_learned_per_query.csv  eval_quick_per_query.csv
data/: _demo_policy_from_learn.json  _policy_sift_learn_run.json  tiny_learn_demo.fvecs
docs/: Agent长时记忆-实现状态对照.md  实验报告-IO优化-2026-05-28.docx  提升方案-基于实测结果.md  方案与实验对比分析.md  架构与实现技术细节.md  赛题剩余工作与交付计划.md
include/: python_bridge.h  vector_store.h
include/cache/: graph_aware_cache.h  isvm_scorer.h
include/dataset/: fvecs.h  index_build_common.h  index_builder.h  vector_dataset.h
include/index/: external_vectors.h  hnsw.h  nsw.h  pq.h  storage_layout.h
include/policy/: agent_io_policy.h
include/prefetch/: io_uring_backend.h  topology_prefetcher.h
include/runtime/: graph_reorder.h  memory_partition.h  static_subgraph.h
include/util/: io_metrics.h  macros.h  simd_distance.h  time.h  topk.h
include/write/: compaction.h  index_merger.h  memtable.h  noblsm_commit.h  nvtable.h  remap_com.h  wal.h
learning/: train_agent_policy.py
learning/policies/: agent_io_policy.cursor.example.json  agent_io_policy.qwen.example.json
python/amio/: __init__.py  fvecs_io.py  vector_store.py
scripts/: linux_run.sh  push_to_github.ps1
src/: python_bridge.cpp  vector_store.cpp
src/cache/: graph_aware_cache.cpp  isvm_scorer.cpp
src/dataset/: fvecs.cpp  index_build_common.cpp  index_builder.cpp  vector_dataset.cpp
src/index/: external_vectors.cpp  hnsw.cpp  nsw.cpp  pq.cpp  storage_layout.cpp
src/policy/: agent_io_policy.cpp
src/prefetch/: io_uring_backend.cpp  topology_prefetcher.cpp
src/runtime/: graph_reorder.cpp  memory_partition.cpp  static_subgraph.cpp
src/write/: compaction.cpp  index_merger.cpp  memtable.cpp  noblsm_commit.cpp  nvtable.cpp  remap_com.cpp  wal.cpp
tests/: compaction_merge_test.cpp  concurrent_test.cpp  disk_roundtrip_test.cpp  high_dim_index_test.cpp  main.cpp  memory_partition_test.cpp  pq_test.cpp  recall_test.cpp  test.h
tools/: build_index.cpp  dataset_loader.cpp  eval_disk.cpp  reorder_index.cpp
